# parampara_poster_template

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  INSTRUCTIONS.txt  README.md  Sri Parakala Acharyas - TEMPLATE.txt  acharyan_captions.csv  acharyan_captions.xlsx  acharyan_captions_english.xlsx  acharyan_captions_kannada.xlsx  acharyan_captions_sanskrit.xlsx  acharyan_captions_telugu.xlsx  captions.csv  docker_entrypoint.sh  generate_parampara_poster.py  pyproject.toml  requirements.txt  run_docker.ps1  run_docker.sh
.github/workflows/: publish-ghcr.yml
assets/: parchment_bg.JPGGOLD1  parchment_bg.JPGGOLD2  parchment_bg.jpgBLUE  parchment_bg.jpgJASMINE  parchment_bg.jpgOLD  parchment_bg.jpgOLD1  parchment_bg.jpgPARCH  parchment_bg.jpgPINK-FLOWERS
assets/fonts/Noto_Serif_Kannada/: README.txt
assets/fonts/Noto_Serif_Tamil/: README.txt
html_parampara_chart/: founders_and_early_acharyas.html  sri_parakala_acharyas.html
