[tool.poetry]
name = "parampara-poster-template"
version = "0.1.0"
description = "Poster generator for the Sri Parakala Matham guru parampara assets."
authors = ["Parampara Poster Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pillow = "^10.2.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
